# fastapi-course

./: .gitignore  README.md  config.py  database.py  main.py  models.py  oauth2.py  pyproject.toml  schemas.py  utils.py
routers/: auth.py  post.py  user.py
